# memories

./: .env.example  .gitignore  REQUIREMENTS.md  SPEC.md  docker-compose.yml  pyproject.toml
openspec/: config.yaml
openspec/changes/m1-project-scaffolding/: design.md  proposal.md  tasks.md
openspec/changes/m1-project-scaffolding/specs/project-setup/: spec.md
openspec/changes/m2-core-infrastructure/: design.md  proposal.md  tasks.md
openspec/changes/m2-core-infrastructure/specs/chromadb-adapter/: spec.md
openspec/changes/m2-core-infrastructure/specs/configuration/: spec.md
openspec/changes/m2-core-infrastructure/specs/data-models/: spec.md
openspec/changes/m2-core-infrastructure/specs/vector-store-protocol/: spec.md
openspec/changes/m3-service-layer/: design.md  proposal.md  tasks.md
openspec/changes/m3-service-layer/specs/decay-computation/: spec.md
openspec/changes/m3-service-layer/specs/memory-operations/: spec.md
openspec/changes/m4-cli-interface/: design.md  proposal.md  tasks.md
openspec/changes/m4-cli-interface/specs/cli-commands/: spec.md
openspec/changes/m5-testing/: design.md  proposal.md  tasks.md
openspec/changes/m5-testing/specs/test-suite/: spec.md
openspec/changes/m6-polish/: design.md  proposal.md  tasks.md
skills/memory-system/: SKILL.md
src/memories/: __init__.py  cli.py  config.py  models.py
src/memories/services/: __init__.py  decay.py  memory_service.py
src/memories/stores/: chromadb_adapter.py  vector_store.py
tests/: conftest.py  test_chromadb_adapter.py  test_cli.py  test_decay.py  test_memory_service.py
(+3 files in other folders)
